# EduManage

./: .env.example  _ide_helper_models.php  docker-compose.yml
app/Console/Commands/: AssignBookCategories.php  TestRecommendations.php  (+3 more)
app/Http/: Kernel.php
app/Models/: AcademicSetting.php  Attendance.php  Book.php  BookCategory.php  BookIssue.php  StudentRecommendationTracking.php  User.php
app/Repositories/: AttendanceRepository.php  UserRepository.php
app/Services/: BookRecommendationService.php  PersonalizedBookRecommendationService.php
config/: app.php  cache.php
database/factories/: UserFactory.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2025_01_15_000001_create_book_categories_table.php  2025_01_15_000002_create_student_recommendation_tracking_table.php  2025_01_15_000004_add_category_id_to_books_table.php  2025_06_25_161418_add_is_final_marks_submitted_to_academic_settings_table.php  2025_07_23_063500_create_books_table.php  2025_07_23_063508_create_book_issues_table.php  2025_07_24_081810_create_attendances_table.php  2025_07_27_123307_create_student_seen_books_table.php
database/seeders/: BookCategorySeeder.php  PermissionSeeder.php
fast_api/: face_db.pt  main.py  pyproject.toml  requirements.txt  s.py
fast_api/app/: DcokerFile  config.py
fast_api/app/api/: __init__.py  admin_api.py  recognition_api.py  static_image.py  stream.py
fast_api/app/core/: aio_broadcaster.py  recognition_logic.py
fast_api/static/: index.html
public/css/: app.css  bootstrap.min.css
resources/views/: home.blade.php
routes/: web.php
(+35 files in other folders)
